force-app/main/default/objects/Project1__c/Project1__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>