force-app/main/default/objects/Project1__c/fields/Project_Account__c.field-meta.xml
<CustomField>
    <fullName>Project_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Account</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects1 (Project Account)</relationshipLabel>
    <relationshipName>Projects11</relationshipName>
    <type>Lookup</type>
</CustomField>